Resolves: tdf#132582 Display duration for calculated time values selection

Change-Id: I634cd0fb059ed9c35849b435bcbd178cd84ac2ae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134132
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 23689e492feb41a391738586cef04ab82cc21f80)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134069
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>